# python-compute

./: .gitignore  Makefile  README.md  computed.toml  config.toml  configuration.toml  dom.xml  fdict.py  instance.full.yaml  instance.yaml  pars.py  pd.py  pyproject.toml  requirements.txt  test.py  xmltool.py
compute/: __init__.py  __main__.py  common.py  config.py  exceptions.py  session.py
compute/cli/: _create.py  commands.py  control.py  parser.py  term.py
compute/instance/: __init__.py  cloud_init.py  devices.py  guest_agent.py  instance.py  schemas.py
compute/storage/: __init__.py  pool.py  volume.py
compute/utils/: config_loader.py  dictutil.py  diskutils.py  identifiers.py  ids.py  units.py
computelib/: __init__.py  config.py  exceptions.py  session.py
computelib/cli/: vmctl.py  vmexec.py
computelib/utils/: mac.py  xml.py
computelib/vm/: __init__.py  base.py  guest_agent.py  installer.py  virtual_machine.py
computelib/volume/: __init__.py  storage_pool.py  volume.py
docs/source/: conf.py  configuration.rst  index.rst  installation.rst
docs/source/_static/: custom.css
docs/source/_templates/: versioning.html
docs/source/cli/: cloud_init.rst  getting_started.rst  index.rst  instance_file.rst  reference.rst  usage.rst
docs/source/pyapi/: exceptions.rst  index.rst  session.rst  utils.rst
docs/source/pyapi/instance/: cloud_init.rst  devices.rst  index.rst  instance.rst
docs/source/pyapi/storage/: index.rst  pool.rst
docs/source/python-api/: exceptions.rst  index.rst  session.rst  storage.rst
docs/source/python-api/instance/: guest_agent.rst  index.rst  instance.rst
docs/source/python-api/storage/: index.rst  pool.rst  volume.rst
node_agent/: __init__.py  base.py  config.py  exceptions.py  main.py  session.py  vm.py  xml.py
node_agent/cli/: vmctl.py  vmexec.py
node_agent/utils/: __init__.py  __old_xml.py  mac.py  vmctl.py  vmexec.py  xml.py
node_agent/vm/: __init__.py  base.py  exceptions.py  ga.py  guest_agent.py  hardware.py  installer.py  main.py  virtual_machine.py
node_agent/volume/: __init__.py  storage_pool.py  volume.py
packaging/: Dockerfile  Makefile  build.sh  completion.bash
packaging/archlinux/: Dockerfile  Makefile  PKGBUILD
packaging/debian/: Makefile  build.sh
packaging/debian/files/: control  copyright  rules
packaging/files/: compute.bash-completion  control  install
