[tool.poetry]
name = "computelib"
version = "0.1.0"
description = "Compute Node Agent library"
authors = ["ge <ge@nixhacks.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libvirt-python = "9.0.0"
lxml = "^4.9.2"
docopt = "^0.6.2"

[tool.poetry.scripts]
na-vmctl = "computelib.cli.vmctl:cli"
na-vmexec = "computelib.cli.vmexec:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "invalid-name",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "import-error",
    "too-many-arguments",
]
