[tool.poetry]
name = 'compute'
version = '0.1.0-dev3'
description = 'Compute instances management library'
license = 'GPL-3.0-or-later'
authors = ['ge <ge@nixhacks.net>']
readme = 'README.md'
include = ['computed.toml', 'instance.full.yaml']

[tool.poetry.dependencies]
python = '^3.11'
libvirt-python = '9.0.0'
lxml = '^4.9.2'
pydantic = '1.10.4'
pyyaml = "^6.0.1"

[tool.poetry.scripts]
compute = 'compute.cli.parser:run'

[tool.poetry.group.dev.dependencies]
ruff = '^0.1.3'
isort = '^5.12.0'

[tool.poetry.group.docs.dependencies]
sphinx = '^7.2.6'
sphinx-autobuild = '^2021.3.14'
sphinx-multiversion = '^0.2.4'
sphinx-argparse = "^0.4.0"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.isort]
skip = ['.gitignore']
lines_after_imports = 2
include_trailing_comma = true
split_on_trailing_comma = true

[tool.ruff]
line-length = 79
indent-width = 4
target-version = 'py311'

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'Q000', 'Q003',
    'D211', 'D212',
    'ANN101', 'ANN102', 'ANN204',
    'ISC001',
    'COM812',
    'D203',
    'T201',
    'S320',
    'EM102',
    'TRY003',
    'EM101',
    'TD003', 'TD006',
    'FIX002',
    'C901',
    'PLR0912', 'PLR0913', 'PLR0915',
]
exclude = ['__init__.py']

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
allow-star-arg-any = true

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.isort]
lines-after-imports = 2
